# SignalBridgePlugin

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Keychron_K5_Max_QMK_ANSI_KeychronRGB.js  README.md  README.zh-CN.md  RGBController_SignalBridgeScript.cpp  RGBController_SignalBridgeScript.h  SignalBridgeHid.cpp  SignalBridgeHid.h  SignalBridgePlugin.cpp  SignalBridgePlugin.h  SignalBridgePlugin_global.h  SignalBridgeRuntimeResources.qrc  SignalBridgeScriptRuntime.cpp  SignalBridgeScriptRuntime.h  SignalBridgeScriptScanner.cpp  SignalBridgeScriptScanner.h
.github/workflows/: main-latest.yml  qt5-release.yml
examples/signalrgb/: Keychron_K5_Max_QMK_ANSI_KeychronRGB.js
include/SignalBridge/: SignalBridgePlugin.h  SignalBridgePlugin.json
resources/: SignalBridgeResources.qrc
resources/@SignalRGB/: DeviceDiscovery.js  Errors.js  lcd.js  permissions.js  serial.js  systeminfo.js
resources/signalrgb/js/: device.js  polyfills.js  scan_stubs.js
src/: SignalBridgePlugin.cpp
src/compat/: Qt5MsvcCompat.h
src/config/: DeviceConfigStore.cpp  DeviceConfigStore.h
src/discovery/: ControllerRegistry.cpp  ControllerRegistry.h  DiscoveryService.cpp  DiscoveryService.h
src/domain/: ColorFrame.h  ControlParameters.cpp  ControlParameters.h  DeviceRecords.cpp  DeviceRecords.h  PathUtils.cpp  PathUtils.h  ScriptTypes.h
src/hid/: HidBackend.cpp  HidBackend.h  HidReportDescriptor.cpp  HidReportDescriptor.h  HidTypes.h
src/openrgb/: DeviceTypeMapper.cpp  DeviceTypeMapper.h  EndpointSession.cpp  EndpointSession.h  FrameBuilder.cpp  FrameBuilder.h  OpenRgbCompat.h  SignalBridgeController.cpp  SignalBridgeController.h  TopologyMapper.cpp  TopologyMapper.h
src/runtime/: BuiltinModules.cpp  BuiltinModules.h  ModuleLoader.cpp  ModuleLoader.h  QuickJsRuntime.cpp  QuickJsRuntime.h  QuickJsValue.cpp  QuickJsValue.h  RuntimeBindingUtils.cpp  RuntimeBindingUtils.h  RuntimeBindings.cpp  RuntimeBindings.h  SignalRgbRuntimeFactory.cpp  SignalRgbRuntimeFactory.h
src/runtime/signalrgb/: DeviceDiscoveryModule.cpp  ErrorsModule.cpp  LcdModule.cpp  PermissionsModule.cpp  SerialModule.cpp  SignalRgbEnvironmentGlobals.cpp  SignalRgbEnvironmentGlobals.h  SignalRgbModuleRegistry.cpp  SignalRgbModuleRegistry.h  SignalRgbModuleUtils.cpp  SignalRgbModuleUtils.h  SystemInfoModule.cpp  SystemInfoModule.h
src/scanning/: ScriptMetadataExtractor.cpp  ScriptMetadataExtractor.h  ScriptScanner.cpp  ScriptScanner.h
src/serial/: OpenRgbSerialPort.cpp  SerialBackend.cpp  SerialBackend.h  SerialTypes.h
src/ui/: DeviceConfigPageFactory.cpp  DeviceConfigPageFactory.h  LogBuffer.cpp  LogBuffer.h  ScriptTableView.cpp  ScriptTableView.h  SignalBridgeWidget.cpp  SignalBridgeWidget.h
tests/: SignalBridgeCoreTests.cpp
